--- a/README
+++ b/README
@@ -67,11 +67,34 @@ Enumerable...
 		puts "#{key} is set to #{value}"
 	end
 	
-Finding...
+Finding... find_by_preference(preference, T/F = T, active-record-options = {})
+
 	@users = User.find_by_preference(:delete_user)  #assumes true
 	
-	#more verbose - find all users who have delete_user = false, aren't named bob, order them by name and limit to 10 records (supports all AR options)
+	More verbose - find all users who have delete_user = false, aren't named bob, order them by name and limit to 10 records (supports all AR options)
 	@users = User.find_by_preference(:delete_user, false, {:conditions => "name <> 'bob'", :order => "name asc", :limit => 10})
+	
+
+Finding... find_by_preferences(hash-or-string, active-record-options = {})
+	preferences can be any of the following:
+	 => {:create_user => true, :delete_user => false}  - would find all records with those settings
+
+	 More complex... 
+	     You can use syntax below to build more complex scenarios.  Note - you must use symbols and true/false
+	     since the code is just doing string replacements.
+	 => "(:create_user = true or (:delete_user = false and :edit_user = true))" 
+	 options - can be any of the normal ActiveRecord find options.  if options[:conditions] exists preferences logic
+	 will be and'ed on to it
+
+	Using a hash
+	@users = User.find_by_preferences({:delete_user => false, :create_user => true})
+	@users = User.find_by_preferences({:delete_user => false, :create_user => true}, {:conditions => "name <> 'bob'", :order => "name asc", :limit => 10})
+	
+	Using a string
+	@users = User.find_by_preferences(":delete_user = false and :create_user = true")
+	@users = User.find_by_preferences(":delete_user = false and :create_user = true", {:conditions => "name <> 'bob'", :order => "name asc", :limit => 10})
+	@users = User.find_by_preferences(":delete_user = false and (:create_user = true or :update_user = false)")
+	
 	
 Warning
 =======
